--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body{
   box-shadow: 0 10px 20px rgba(0,0,0,0.05);
   position: fixed;
 }
+.footer
+{
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+}
 .bubbles{
     position: relative;
     display: flex;
