--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
   justify-content: center;
   min-height: 100vh;
   background: #000000;
+  overflow: hidden;
 }
 .container{
   width: 450px;
