--- a/style.css
+++ b/style.css
@@ -15,13 +15,15 @@ body{
   overflow: hidden;
 }
 .container{
-  top: 50%;
-  left: 50%;
   width: 450px;
   background: #fff;
   border-radius: 8px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.05);
   position: fixed;
+  top: 50%;
+  left: 50%;
+  position: fixed;
+  transform: translate(-50%, -50%);
 }
 .footer
 {
